// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Installations should render component when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          Installations
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="mocked-styled-135 el-input-wrap-full"
            >
              <div
                class="mocked-styled-135 el-input-wrap-full"
              >
                <div
                  class="el-mb5 el-input-group"
                >
                  <input
                    aria-label="Input type undefined"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <span
                    class="mocked-styled-4 el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name searchSystem"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Search Apps
                  </label>
                </div>
                <div
                  class="mocked-styled-44 el-loader-container"
                >
                  <div
                    class="el-mb5 el-loader"
                  >
                    <div
                      class="mocked-styled-47 el-loader-moving-bar"
                    />
                  </div>
                </div>
                <div
                  class="mocked-styled-58 el-multi-select-input-wrapper"
                >
                  <input
                    class="mocked-styled-57 el-multi-select-input"
                    id="app-ids-select"
                    name="appIds"
                  />
                  <div
                    aria-label="Multi selected options"
                    class="el-mb5 el-multi-select-selected"
                    role="listbox"
                  >
                    <span
                      class="el-ml2 el-intent-default el-icon-new el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        title="Icon image with name task"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <p>
                      No apps selected
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <label
                class="el-flex el-mb3 el-label"
                for="developer-search-box"
              >
                Company
              </label>
              <div
                aria-controls=":r0:"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="mocked-styled-84 el-searchable-dropdown-container"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <label
                class="el-flex el-mb3 el-label"
                for="client-search-box"
              >
                Client
              </label>
              <div
                aria-controls=":r1:"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="mocked-styled-84 el-searchable-dropdown-container"
                role="combobox"
              >
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type date format dd/mm/yyy"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Installed Date From
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type date format dd/mm/yyy"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Installed Date To
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <label
                  class="mocked-styled-41 el-label"
                >
                  Is Charged Consumption
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-consumption-all"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-consumption-true"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Charged
                    </span>
                  </label>
                  <input
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-consumption-false"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Free
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <label
                  class="mocked-styled-41 el-label"
                >
                  Status
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-is-active"
                    name="isInstalled"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-is-active"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Active
                    </span>
                  </label>
                  <input
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-is-terminated"
                    name="isInstalled"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-is-terminated"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Terminated
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11"
        >
          <div
            class="mocked-styled-2 el-button-group"
          >
            <div
              class="mocked-styled-3 el-button-group-inner"
            >
              <button
                class="el-intent-primary el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Download CSV
              </button>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="mocked-styled-135 el-input-wrap-full"
          >
            <div
              class="mocked-styled-135 el-input-wrap-full"
            >
              <div
                class="el-mb5 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  placeholder="Search"
                />
                <span
                  class="mocked-styled-4 el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name searchSystem"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Search Apps
                </label>
              </div>
              <div
                class="mocked-styled-44 el-loader-container"
              >
                <div
                  class="el-mb5 el-loader"
                >
                  <div
                    class="mocked-styled-47 el-loader-moving-bar"
                  />
                </div>
              </div>
              <div
                class="mocked-styled-58 el-multi-select-input-wrapper"
              >
                <input
                  class="mocked-styled-57 el-multi-select-input"
                  id="app-ids-select"
                  name="appIds"
                />
                <div
                  aria-label="Multi selected options"
                  class="el-mb5 el-multi-select-selected"
                  role="listbox"
                >
                  <span
                    class="el-ml2 el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name task"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <p>
                    No apps selected
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <label
              class="el-flex el-mb3 el-label"
              for="developer-search-box"
            >
              Company
            </label>
            <div
              aria-controls=":r0:"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-84 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <label
              class="el-flex el-mb3 el-label"
              for="client-search-box"
            >
              Client
            </label>
            <div
              aria-controls=":r1:"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-84 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Installed Date From
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Installed Date To
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Is Charged Consumption
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Charged
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Free
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Status
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-is-active"
                  name="isInstalled"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-is-active"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Active
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-is-terminated"
                  name="isInstalled"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-is-terminated"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Terminated
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11"
      >
        <div
          class="mocked-styled-2 el-button-group"
        >
          <div
            class="mocked-styled-3 el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Download CSV
            </button>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Installations should render component with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          Installations
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="mocked-styled-135 el-input-wrap-full"
            >
              <div
                class="mocked-styled-135 el-input-wrap-full"
              >
                <div
                  class="el-mb5 el-input-group"
                >
                  <input
                    aria-label="Input type undefined"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <span
                    class="mocked-styled-4 el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name searchSystem"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Search Apps
                  </label>
                </div>
                <div
                  class="mocked-styled-58 el-multi-select-input-wrapper"
                >
                  <input
                    class="mocked-styled-57 el-multi-select-input"
                    id="app-ids-select"
                    name="appIds"
                  />
                  <div
                    aria-label="Multi selected options"
                    class="el-mb5 el-multi-select-selected"
                    role="listbox"
                  >
                    <span
                      class="el-ml2 el-intent-default el-icon-new el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        title="Icon image with name task"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <p>
                      No apps selected
                    </p>
                  </div>
                  <div
                    aria-label="Multi unselected options"
                    class="el-mb5 el-multi-select-un-selected"
                    role="listbox"
                  >
                    <input
                      aria-checked="false"
                      aria-hidden="true"
                      class="mocked-styled-52 el-multi-select-checkbox"
                      id="test-static-id"
                      role="option"
                      type="checkbox"
                    />
                    <label
                      class="el-has-grey-chips el-multi-select-label"
                      for="test-static-id"
                      role="option"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <label
                class="el-flex el-mb3 el-label"
                for="developer-search-box"
              >
                Company
              </label>
              <div
                aria-controls=":r3:"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="mocked-styled-84 el-searchable-dropdown-container"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <label
                class="el-flex el-mb3 el-label"
                for="client-search-box"
              >
                Client
              </label>
              <div
                aria-controls=":r4:"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="mocked-styled-84 el-searchable-dropdown-container"
                role="combobox"
              >
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type date format dd/mm/yyy"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Installed Date From
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type date format dd/mm/yyy"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Installed Date To
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <label
                  class="mocked-styled-41 el-label"
                >
                  Is Charged Consumption
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-consumption-all"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-consumption-true"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Charged
                    </span>
                  </label>
                  <input
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-consumption-false"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Free
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <label
                  class="mocked-styled-41 el-label"
                >
                  Status
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-is-active"
                    name="isInstalled"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-is-active"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Active
                    </span>
                  </label>
                  <input
                    class="mocked-styled-127 el-toggle-radio"
                    id="option-is-terminated"
                    name="isInstalled"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-is-terminated"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="mocked-styled-124 el-toggle-radio-item"
                    >
                      Terminated
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11"
        >
          <div
            class="mocked-styled-2 el-button-group"
          >
            <div
              class="mocked-styled-3 el-button-group-inner"
            >
              <button
                class="el-intent-primary el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Download CSV
              </button>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="8"
          role="table"
        >
          <div
            class="mocked-styled-101 el-table-headers-row"
            role="row"
          >
            <div
              aria-label="Customer Name"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Customer Name
            </div>
            <div
              aria-label="App Name"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              App Name
            </div>
            <div
              aria-label="Reapit Customer Code"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Reapit Customer Code
            </div>
            <div
              aria-label="Customer Address"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Customer Address
            </div>
            <div
              aria-label="Date Installed"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Date Installed
            </div>
            <div
              aria-label="Installed By"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Installed By
            </div>
            <div
              aria-label="Date Uninstalled"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Date Uninstalled
            </div>
            <div
              aria-label="Uninstalled By"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Uninstalled By
            </div>
            <div
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name settings"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-110 el-table-row-container"
            role="row"
          >
            <div
              class="mocked-styled-103 el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1.25rem;"
                    title="Icon image with name property"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Customer Name"
                >
                  Sandbox Estates
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1.25rem;"
                    title="Icon image with name insights"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.375 15.375h-2.25C3.504 15.375 3 15.879 3 16.5V21h4.5v-4.5c0-.621-.504-1.125-1.125-1.125m6.75-5.625h-2.25c-.621 0-1.125.504-1.125 1.125V21h4.5V10.875c0-.621-.504-1.125-1.125-1.125M19.875 3h-2.25c-.621 0-1.125.504-1.125 1.125V21H21V4.125C21 3.504 20.496 3 19.875 3"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="App Name"
                >
                  App Test Name
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Reapit Customer Code"
                >
                  SBOX
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Customer Address"
                >
                  67-74 Third Floor Saffron Hill London EC1N 8QX
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Date Installed"
                >
                  23-03-2022
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Installed By"
                >
                  test@example.com
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Date Uninstalled"
                >
                  -
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Uninstalled By"
                />
              </div>
              <div
                class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                role="cell"
                tabindex="0"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name more"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-113 el-table-expandable-row"
            >
              <div
                class="mocked-styled-114 el-table-expandable-container"
              >
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Togggle API Consumption
                    </button>
                    <button
                      class="el-intent-danger el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Uninstall
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-71 el-pagination-wrap"
        >
          <button
            aria-label="Previous"
            class="mocked-styled-74 el-pagination-button"
            data-testid="back-button"
            role="button"
            type="button"
          >
            <span
              class="el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name chevronLeft"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <div
            class="mocked-styled-72 el-pagination-text"
          >
            <input
              aria-label="Current page number, edit to select page of 1 available"
              class="mocked-styled-73 el-pagination-input"
              value="1"
            />
             
            of 
            1
          </div>
          <button
            aria-label="Next"
            class="mocked-styled-74 el-pagination-button"
            data-testid="forward-button"
            role="button"
            type="button"
          >
            <span
              class="el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name chevronRight"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="mocked-styled-135 el-input-wrap-full"
          >
            <div
              class="mocked-styled-135 el-input-wrap-full"
            >
              <div
                class="el-mb5 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  placeholder="Search"
                />
                <span
                  class="mocked-styled-4 el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name searchSystem"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Search Apps
                </label>
              </div>
              <div
                class="mocked-styled-58 el-multi-select-input-wrapper"
              >
                <input
                  class="mocked-styled-57 el-multi-select-input"
                  id="app-ids-select"
                  name="appIds"
                />
                <div
                  aria-label="Multi selected options"
                  class="el-mb5 el-multi-select-selected"
                  role="listbox"
                >
                  <span
                    class="el-ml2 el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name task"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <p>
                    No apps selected
                  </p>
                </div>
                <div
                  aria-label="Multi unselected options"
                  class="el-mb5 el-multi-select-un-selected"
                  role="listbox"
                >
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <label
              class="el-flex el-mb3 el-label"
              for="developer-search-box"
            >
              Company
            </label>
            <div
              aria-controls=":r3:"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-84 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <label
              class="el-flex el-mb3 el-label"
              for="client-search-box"
            >
              Client
            </label>
            <div
              aria-controls=":r4:"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-84 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Installed Date From
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Installed Date To
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Is Charged Consumption
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Charged
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Free
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Status
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-is-active"
                  name="isInstalled"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-is-active"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Active
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-is-terminated"
                  name="isInstalled"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-is-terminated"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Terminated
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11"
      >
        <div
          class="mocked-styled-2 el-button-group"
        >
          <div
            class="mocked-styled-3 el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Download CSV
            </button>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="8"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Customer Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Customer Name
          </div>
          <div
            aria-label="App Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            App Name
          </div>
          <div
            aria-label="Reapit Customer Code"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Reapit Customer Code
          </div>
          <div
            aria-label="Customer Address"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Customer Address
          </div>
          <div
            aria-label="Date Installed"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Date Installed
          </div>
          <div
            aria-label="Installed By"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Installed By
          </div>
          <div
            aria-label="Date Uninstalled"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Date Uninstalled
          </div>
          <div
            aria-label="Uninstalled By"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Uninstalled By
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name property"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Sandbox Estates
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name insights"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.375 15.375h-2.25C3.504 15.375 3 15.879 3 16.5V21h4.5v-4.5c0-.621-.504-1.125-1.125-1.125m6.75-5.625h-2.25c-.621 0-1.125.504-1.125 1.125V21h4.5V10.875c0-.621-.504-1.125-1.125-1.125M19.875 3h-2.25c-.621 0-1.125.504-1.125 1.125V21H21V4.125C21 3.504 20.496 3 19.875 3"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="App Name"
              >
                App Test Name
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                SBOX
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                67-74 Third Floor Saffron Hill London EC1N 8QX
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Installed By"
              >
                test@example.com
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Date Uninstalled"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Uninstalled By"
              />
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Togggle API Consumption
                  </button>
                  <button
                    class="el-intent-danger el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Uninstall
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-71 el-pagination-wrap"
      >
        <button
          aria-label="Previous"
          class="mocked-styled-74 el-pagination-button"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="mocked-styled-72 el-pagination-text"
        >
          <input
            aria-label="Current page number, edit to select page of 1 available"
            class="mocked-styled-73 el-pagination-input"
            value="1"
          />
           
          of 
          1
        </div>
        <button
          aria-label="Next"
          class="mocked-styled-74 el-pagination-button"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronRight"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
